# cpp_nav

./: .gitignore  CMakeLists.txt  README.md  deskew_viewer  imu_driver_test  imu_record_tool  l1_driver_test  l1_record_tool  mock_planner_generator  replay_player  rm_nav_main  stm32_bridge_test  warmup_mapping_tool  待解决问题.md
config/: comm.yaml  costmap.yaml  debug.yaml  frames.yam  frames.yaml  localization.yaml  mapping.yaml  mission.yaml  mock_scenario.yaml  mot.yaml  planner.yaml  safety.yaml  sensors.yaml  spawn.yaml  system.yaml  warmup_waypoints.txt
docs/: architecture.md  comm_protocol.md  debug_channels.md  map_format.md  mapping_hardening.md  performance_budget.md  state_machine.md  thread_model.md
logs/: imu_record.rmr  l1_record.rmr  stm32_loop.rmr  test_waypoint_manager_waypoints.txt
logs/crash/: last_runtime_state.json
logs/deskew_demo/: compare.html  deskewed_frame.ply  raw_frame.ply  summary.txt
logs/failed/: map_meta.json  map_validation_report.json
logs/last_good/: global_map.pcd  map_validation_report.json
logs/mock_planner_ctest/: cmd.json  dynamic_obstacles.json  global_path.json  local_costmap.pcd  planner_status.json  pose.json  static_map.pcd  summary.txt  trajectory.json
logs/mock_planner_demo/: cmd.json  dynamic_obstacles.json  global_path.json  goal.json  local_costmap.pcd  planner_status.json  pose.json  summary.txt  trajectory.json
logs/mock_planner_fix_verify/: pose.json  summary.txt
logs/mock_planner_foxglove_demo/: dynamic_obstacles.json  global_path.json  local_costmap.pcd  planner_status.json  summary.txt
logs/mock_planner_plot_topics/: cmd.json  dynamic_obstacles.json  global_path.json  pose.json
logs/mock_planner_scene_demo/: local_costmap.pcd  planner_status.json
logs/mock_planner_status_detail/: planner_status.json  trajectory.json
logs/mock_planner_status_detail_v2/: local_costmap.pcd  planner_status.json  summary.txt
logs/mock_planner_tuned/: cmd.json  dynamic_obstacles.json  global_path.json  local_costmap.pcd  planner_status.json  pose.json  summary.txt  trajectory.json
logs/mock_planner_view/: cmd.json  dynamic_obstacles.json  global_path.json  local_costmap.pcd  planner_status.json  pose.json  summary.txt  trajectory.json
logs/mock_planner_yaml_demo/: cmd.json  dynamic_obstacles.json  pose.json  summary.txt  trajectory.json
logs/mock_planner_yaml_demo_fix/: cmd.json  dynamic_obstacles.json  summary.txt
logs/mock_planner_yaml_demo_fix2/: dynamic_obstacles.json  global_path.json  trajectory.json
logs/mock_protocol_probe/: cmd.json  dynamic_obstacles.json  global_path.json  local_costmap.pcd  planner_status.json  pose.json  summary.txt  trajectory.json
logs/mock_ws_check/: dynamic_obstacles.json  global_path.json  local_costmap.pcd  planner_status.json  pose.json  summary.txt  trajectory.json
logs/mock_ws_diag/: cmd.json  dynamic_obstacles.json  global_path.json  local_costmap.pcd  planner_status.json  pose.json  summary.txt  trajectory.json
logs/mock_ws_probe/: dynamic_obstacles.json  global_path.json  local_costmap.pcd  planner_status.json  pose.json  summary.txt  trajectory.json
logs/test_mapping_pipeline_last_good/: global_map.pcd  map_meta.json  map_validation_report.json
logs/test_mapping_pipeline_output/: map_validation_report.json
logs/warmup_mapping_demo_v2/: summary.txt
logs/watchdog/: process_heartbeat.json
scripts/: prepare_delivery.sh
src/app/: app.cpp  bootstrap.cpp  command_frame_transform.cpp  main.cpp  match_mode_controller.cpp  odom_feedback_yaw_adapter.cpp  runtime.cpp
src/common/: time.cpp
src/config/: config_loader.cpp
src/debug/: foxglove_server.cpp
src/fsm/: mode_recovery.cpp  nav_fsm.cpp
src/localization/: icp_matcher.cpp  initial_pose_provider.cpp  localization_engine.cpp  map_loader.cpp  map_odom_fuser.cpp  ndt_matcher.cpp  pose_quality_estimator.cpp  relocalization_manager.cpp
src/mapping/: eskf_lio.cpp  lio_frontend.cpp  loop_candidate_detector.cpp  loop_closure_matcher.cpp  loop_correction_gate.cpp  map_builder_3d.cpp  map_projector_2d.cpp  map_save_manager.cpp  map_serializer.cpp  map_validator.cpp  mapping_engine.cpp  voxel_map.cpp  waypoint_manager.cpp
src/perception/: dynamic_layer.cpp  euclidean_cluster.cpp  ground_filter.cpp  inflation_layer.cpp  local_costmap_builder.cpp  mot_manager.cpp  obstacle_layer.cpp  preprocess_pipeline.cpp  range_crop_filter.cpp  tracker_kf.cpp  voxel_filter.cpp
src/planning/: center_hold_controller.cpp  global_astar.cpp  goal_manager.cpp  mission_manager.cpp  omni_dwa.cpp  planner_coordinator.cpp  recovery_planner.cpp
src/protocol/: crc16.cpp  crc8.cpp  protocol_codec.cpp
src/safety/: collision_checker.cpp  command_gate.cpp  deadman_checker.cpp  failover_policy.cpp  safety_manager.cpp  watchdog_heartbeat.cpp
src/sync/: deskew.cpp  imu_preintegrator.cpp  sensor_sync_buffer.cpp
src/tf/: static_tf_registry.cpp  tf_tree_lite.cpp  timed_pose_buffer.cpp  transform_query.cpp
src/utils/: file_io.cpp  logger.cpp
tests/integration/: test_foxglove_server.cpp  test_full_runtime.cpp  test_localization_pipeline.cpp  test_mapping_pipeline.cpp  test_pipeline_flow.cpp  test_planner_pipeline.cpp  test_runtime_mapping_mode.cpp
tests/unit/: test_center_hold.cpp  test_collision_checker.cpp  test_command_frame_transform.cpp  test_command_gate.cpp  test_double_buffer.cpp  test_dwa_dynamic_risk.cpp  test_dynamic_suppression_validation.cpp  test_global_astar.cpp  test_lio_frontend.cpp  test_local_costmap_builder.cpp  test_localization_loop.cpp  test_localization_recovery.cpp  test_loop_candidate_detector.cpp  test_loop_closure_matcher.cpp  test_loop_correction_gate.cpp  test_map_builder_dynamic_suppression.cpp  test_map_loader.cpp  test_map_projector_probabilistic.cpp  test_map_validator_trajectory.cpp  test_mapping_frontend_scan_to_map.cpp  test_mapping_frontend_scan_to_scan.cpp  test_mapping_keyframe_cache.cpp  (+22 more)
tools/: deskew_viewer.cpp  imu_driver_test.cpp  imu_record_tool.cpp  l1_driver_test.cpp  l1_record_tool.cpp  mock_planner_generator.cpp  replay_player.cpp  stm32_bridge_test.cpp  warmup_mapping_tool.cpp
(+437 files in other folders)
